# projectflow-automator

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: admin-setup.md  architecture.md  manual_testing.md  user-guide.md
src/projectflow/: __init__.py  __main__.py  app.py  application_settings.py  build.py  config.py  demo.py  exceptions.py  logging.py  services.py  updates.py
src/projectflow/auth/: msal_client.py  onboarding_service.py  token_storage.py
src/projectflow/core/: duplication.py  excel_com_repertoire.py  fiche_service.py  local_repertoire.py  models.py  numero.py  project_service.py  repertoire_queue.py  repertoire_service.py
src/projectflow/graph/: client.py  excel.py  onedrive.py  outlook.py  planner.py
src/projectflow/outlook/: local.py  models.py  windows.py
src/projectflow/platform/: filemanager.py  paths.py
src/projectflow/resources/: __init__.py  app_settings.example.json
src/projectflow/ui/: controller.py  creation_tab.py  main_window.py
src/projectflow/ui/dialogs/: fiche_selection.py  settings.py
src/projectflow/ui/onboarding/: wizard.py
tests/integration/: test_graph_client.py
tests/ui/: test_controller.py  test_onboarding_smoke.py  test_settings_dialog.py
tests/unit/: test_app_modes.py  test_application_settings.py  test_auth.py  test_build.py  test_config.py  test_demo.py  test_duplication.py  test_excel_com_repertoire.py  test_fiche_service.py  test_graph_wrappers.py  test_local_repertoire.py  test_numero.py  test_onboarding_service.py  test_outlook_local.py  test_platform_and_logging.py  test_project_service.py  test_repertoire_queue.py  test_repertoire_service.py  test_services.py  test_updates.py
