[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "projectflow-automator"
version = "0.1.14"
description = "Application desktop cross-platform pour automatiser la creation des projets Balz Metal Sa."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Balz Metal Sa" }]
dependencies = [
  "httpx>=0.27",
  "openpyxl>=3.1",
  "platformdirs>=4",
  "pydantic>=2.8",
  "PySide6>=6.7",
  "pywin32>=306; sys_platform == 'win32'",
  "qasync>=0.27",
  "structlog>=24",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-qt>=4.4",
  "pytest-cov>=5",
  "ruff>=0.5",
  "types-openpyxl>=3.1",
]
packaging = [
  "pyinstaller>=6.10",
]

[project.scripts]
projectflow = "projectflow.__main__:main"
projectflow-build = "projectflow.build:main"

[tool.hatch.build.targets.wheel]
packages = ["src/projectflow"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "DTZ011",
  "EM101",
  "EM102",
  "INP001",
  "ISC001",
  "PLR0915",
  "PLR0913",
  "S603",
  "S606",
  "S607",
  "TC001",
  "TC002",
  "TC003",
  "TRY003",
  "TRY004",
]

[tool.ruff.lint.per-file-ignores]
"src/projectflow/core/excel_com_repertoire.py" = ["ANN401"]
"src/projectflow/outlook/windows.py" = ["ANN401"]
"tests/unit/test_excel_com_repertoire.py" = ["N802", "N803", "SLF001"]
"tests/**/*.py" = [
  "ANN001",
  "ANN401",
  "ASYNC240",
  "ARG001",
  "ARG002",
  "PLR2004",
  "S101",
  "S105",
  "S106",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["projectflow"]
plugins = ["pydantic.mypy"]
warn_unreachable = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["PySide6.*", "qasync.*"]
ignore_missing_imports = true

[tool.coverage.report]
fail_under = 80
show_missing = true
